k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aipost-backend
  namespace: aipost

spec:
  type: ClusterIP

  selector:
    app: aipost-backend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
